# Support_triage_env

./: .dockerignore  .gitignore  Dockerfile  External_Meta_OpenEnv_Hackathon_Participant_Help_Guide.txt  External_OpenEnv_Hackathon_FAQs.txt  HACKATHON_SETUP.md  README.md  blog.md  export_rlvr_compact_sft.py  export_rlvr_grpo_dataset.py  generate_result_graphs.py  inference.py  openenv.yaml  pyproject.toml  train_openenv_grpo.py  train_openenv_rlvr.py  train_unsloth_sft.py
artifacts/: train_eval_report.json  train_eval_summary.md  train_metrics.json
documentation_openenv_customer.support/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
documentation_openenv_customer.support/docs/: architecture.md  environment-loop.md  hackathon-fit.md  intro.mdx  judging-and-demo.md  pivot-strategy.md  problem-statement.md  project-overview.md  reward-and-evaluation.md  training-and-submission.md
notebooks/: triageos_training_colab.ipynb
server/: app.py
support_triage_env/: __init__.py  client.py  graders.py  models.py  report_summary.py  rlvr_compact_prompt.py  simulator.py  synthetic_dataset.py  tasks.py  train_and_evaluate.py  train_classifier.py  training_data.py  trajectory_dataset.py
support_triage_env/baseline/: run_baseline.py
tests/: conftest.py  test_inference_logging.py  test_inference_policy.py  test_inference_postprocess.py  test_inference_proxy.py  test_project_alignment.py  test_simulator.py  test_synthetic_dataset.py  test_train_eval_policy.py  test_training_data.py  test_trajectory_dataset.py
tools/: generate_problem_poster.py
(+7 files in other folders)
